--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     </head>
     <body>
         <div class="clock">
+            <div class = "hand" id = "second"></div>
+            <div class = "hand" id = "minute"></div>
             <div class = "hand" id = "hour"></div>
-            
         </div>
     </body>
 
